--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "AppSettings": {
+    "Token": "you are my only baby"
+  },
   "ConnectionStrings":{
     "DefaultConnection":"Data Source=API.db"
   },
