--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -12,5 +12,10 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "CloudinarySettings": {
+    "CloudName": "nuoliriipus",
+    "ApiKey": "682757432478943",
+    "ApiSecret": "uFD1WpJPLR-xIi6DeAxUNr2cbG4"
+  }
 }
